Optimize allocations for List.copyOf and Set.copyOf
We can optimize away the array allocation just
to call `List.of/Set.of` and instead create copies directly
based the supplied collection.